--- a/BitmapGrid/src/com.codefish.components.bitmapGrid/BitmapGrid.mxml
+++ b/BitmapGrid/src/com.codefish.components.bitmapGrid/BitmapGrid.mxml
@@ -94,6 +94,10 @@
 			 */ 
 			private function measureViewport():void
 			{
+				if (!columns){
+					return;
+				}
+				
 				numColumns = columns.length;
 				numRows = dataProvider.length;
 				
