--- a/BitmapGridTestProject/src/BitmapGridTest.mxml
+++ b/BitmapGridTestProject/src/BitmapGridTest.mxml
@@ -2,7 +2,11 @@
 <s:Application xmlns:fx="http://ns.adobe.com/mxml/2009"
 			   xmlns:s="library://ns.adobe.com/flex/spark"
 			   xmlns:local="*"
-			   width="100%" height="100%" xmlns:src="src.*" creationComplete="application1_creationCompleteHandler(event)" xmlns:bitmapGrid="com.codefish.components.bitmapGrid.*">
+			   xmlns:src="src.*"
+			   xmlns:bitmapGrid="com.codefish.components.bitmapGrid.*"
+			   width="100%" height="100%"
+			   creationComplete="application1_creationCompleteHandler(event)"
+			   viewSourceURL="srcview/index.html">
 	<fx:Script>
 		<![CDATA[
 			import mx.events.FlexEvent;
